# Algorithms-implementation

./: README
ATM_C++/: README  atm.cc  atm.h  atmparts.cc  atmparts.h  bank.cc  bank.h  main.cc  money.cc  money.h  session.cc  session.h  status.h  sysdep.h  transaction.h  window.cc  window.h
ATM_C++/UML_Design/: ATM.vpp  ATM.vpp~2  ATM.vpp~3  ATM.zargo  ATM.zargo~
ATM_C++/nbproject/: Makefile-variables.mk
ATM_Java/nbproject/: build-impl.xml  genfiles.properties
BOOST/: README  boost1  compileWithBoost  example  example.cpp  extractSubject.cpp  simpleProgram.cpp
C++_DESIGN/: Chaine.h  Complex.cpp  Pile.h  Pimpl.cpp  Point.cpp  Point.h  README  VirtualFunctions.cpp  VirtualHeritage.cpp  VirtualHeritage.h  main.cpp  testTemplatePile.cpp  testVirtualHeritage.cpp
C++_DESIGN/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
CMA-ES/: README
CSHARP/: README  helloConsole.cs  helloGtk.cs
CSHARP/CommandPattern/: CommandPattern.sln
CSHARP/FactoryPattern/: FactoryPattern.sln
CSHARP/HelloGtk/: HelloGtk.sln
CSHARP/ProxyPattern/: ProxyPattern.sln
C_TO_C++/: poly.txt  program01.cpp  program02.cpp  program03.cpp  program04.cpp  program05.cpp  program06.cpp  program07.cpp  program08.cpp  program09.cpp  program10.cpp  program11.cpp  program12  program12.cpp  program13  program13.cpp  program14  program14.cpp  program15  program15.cpp  program15bis  program15bis.cpp  program16  program16.cpp  program17  program17.cpp  program17bis  program17bis.cpp  program18  program18.cpp  program18bis  program18bis.cpp  program18ter  program18ter.cpp  program19  program19.cpp  program19_chaine.cpp  program19bis.cpp  program20.cpp  program21.cpp  (+10 more)
C_TO_C++/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
DB/sdzMysql/: animal.csv  helloWold.cpp  remplissageAnimal.sql
DESIGN_PATTERNS/Behavioral/: ChainOfResponsability.cpp  ChainOfResponsabilityBis.cpp  CommandDesignBis.cpp  CommandDesignTer.cpp  Interpreter.cpp  Mediator.cpp  MediatorBis.cpp  Memento.cpp  ObserverTer.cpp  State.cpp  Strategy.cpp  Template.cpp  Visitor.cpp  VisitorTer.cpp  chain  chain2
DESIGN_PATTERNS/Creationnal/: AbstractFactory.cpp  Builder.cpp  Factory.cpp  Prototype.cpp  Singleton.cpp  builder
DESIGN_PATTERNS/Structural/: Adapter.cpp  Decorator.cpp  comp1  proxy
DESIGN_PATTERS/Creationnal/: AbstractFactory.cpp  ObjectPool.java  sing
DESIGN_PATTERS/Structural/: Adapter2.cpp  Bridge.cpp  Composite1.cpp  Composite2.cpp  Facade.cpp  FlyWeight.cpp  Private.net  Proxy.cpp  comp2  deco  facade  fw
DIJKSTRA/: Edge.h  Makefile  Node.h  dj
EFFECTIVEC++/: waysToImproveProgramsAndDesigns.cpp
FAQ_C++/: CSingleton.cpp  CSingleton.h  Strategy.cpp  Strategy.h  StringBuilder.cpp  VirtualFunctions.cpp  main.cpp
FAQ_C++/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
FLEX/: README
FLEX/FacebookUserStatusAIR/: .actionScriptProperties
FLEX/myWebSite/: .actionScriptProperties
FUNNY/: README  yanim.c
GRAPHS/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  Package-Release.bash  configurations.xml  project.xml
JAVA_TUTORAILS/: README
JNI/: HelloWorld.java  README  libHelloWorld.c  make.sh
JUNIT/: .project  README
JUNIT/Calculator/: .project
JUNIT/MockObjects/: .classpath  .project
JUNIT/Stack/: .project
JUNIT/com.minella.easyMock/: .classpath  .project
JUNIT/largest/: .project
JUNIT/money/: .project
LINEAR_PROGRAMMING/: README
LINEAR_PROGRAMMING/plot/: calculators.eps  calculators_graph.p  functions.p  giapetto.mod  giapetto.sol  giapetto_with_data.mod  plot  plot_calculators  solutionSpace.eps  solutionSpace.p
LINEAR_PROGRAMMING/problems/: betails.mod  bicycleProductionPlanification.mod  bicycleProductionPlanification.sol  calculators.mod  calculators.sol  compile  electricalProduction.mod  example1.sol.1  example1_max.mod  example1_max.sol  example1_min.mod  example1_min.sol  example2_max.mod  example2_max.sol  example2_min.mod  example2_min.sol  giapetto.mod  giapetto.sol  giapetto_data.mod  giapetto_data.sol  refinery.mod  refinery.sol  sample.cpp  scan.awk  sensibility  simpleExample.mod  simpleExample.sol  simpleExample2.mod  simpleExample2.sol  simpleExample2_withData.mod  test.mod
LINKED_LISTS/: main.cpp
MCTS/CV/: .~lock.CV_Expert_fr2.odt#  CV_Expert_fr2.odt  CV_Expert_fr3.odt  CV_Expert_fr4.odt  CV_Expert_fr5.odt  CV_Expert_fr6.odt  CV_Expert_fr7.odt  CV_Expert_fr8.odt  CV_Expert_fr9.doc  CV_Expert_fr9.odt  CV_Hassen_Doghmen_ExpertEngineer.doc  CV_Hassen_Doghmen_ExpertEngineer.rtf  CV_Hassen_Doghmen_ExpertEngineer.txt  CV_RD_fr1.odt  ExperienceINRIA.odt  ExperiencePro.odt  coverLetter.odt  experience.txt  experienceProfessionnelle  mesPublications.odt
NEURAL_NETWORK/: README
PATTERN_MATCHING/: main.cpp
PLUGIN/: README
PREPROCESSING/: currency_example  currency_example.cpp
PROJECT_MANAGEMENT/: README
QT/: README
QUICK_TESTS/: atoi
SHARK/: README
TRICKS/: bashTricks  careers  cppTricks  linux  mergePdf  viTricks  webTricks  x11forwarding
mash_sdk_1.0.0/: CMakeLists.txt  LICENSE.txt  README.txt  create_heuristic.py
mash_sdk_1.0.0/cmake/: plugins.cmake
mash_sdk_1.0.0/data/: CREDITS.TXT  car.ppm  cup.ppm  duck.ppm
mash_sdk_1.0.0/dependencies/: CMakeLists.txt
mash_sdk_1.0.0/heuristics/: CMakeLists.txt  heuristic.def  template.cpp
mash_sdk_1.0.0/heuristics/examples/: identity.cpp  mean_threshold.cpp
mash_sdk_1.0.0/mash/: CMakeLists.txt  dynlibs_manager.cpp  dynlibs_manager.h  dynlibs_manager_delegate_interface.h  heuristic.h  heuristics_manager.cpp  heuristics_manager.h  image.cpp  image.h  imageutils.cpp  imageutils.h
mash_sdk_1.0.0/mash-utils/: CMakeLists.txt  declarations.h  errors.cpp  errors.h  platform.h  stringutils.cpp  stringutils.h
mash_sdk_1.0.0/sdk/: CMakeLists.txt  testheuristic.cpp
(+332 files in other folders)
